# coin-detection-challenge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  index.html  mkdocs.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
01_problem_understanding/: index.html
02_architecture_overview/: index.html
03_detection_and_geometry/: index.html
app/: main.py
app/api/: routes.py
app/core/: config.py  db.py  logger.py
app/db/: __init__.py  models.py
app/middleware/: __init__.py  logging.py
app/schemas/: coin.py
app/services/: detection.py  geometry.py
artifacts/evaluation/2026-02-13T10-20-00Z/: evaluation_provenance.json  evaluation_summary.json  failure_examples.json  per_image_analysis.jsonl
artifacts/evaluation/2026-02-13T17-30-19Z/: evaluation_provenance.json  failure_examples.json  per_image_analysis.jsonl
artifacts/evaluation/2026-02-13T17-40-27Z/: evaluation_provenance.json  evaluation_summary.json  failure_examples.json
docs/: 01_problem_understanding.md  02_architecture_overview.md  03_detection_and_geometry.md
evaluation/: __init__.py  artifacts.py  config.py  eval_strategy.md  evaluator.py  logger.py  metadata.py  metrics.py  utils.py
models/: README.md
notebooks/: 01_exploration.ipynb  02_evaluation.ipynb
notebooks/artifacts/evaluation/: evaluation_report.json
search/: search_index.json
stylesheets/: extra.css
tests/: test_detection.py
tests/integration/: test_api.py  test_errors.py
tests/unit/: conftest.py  test_config.py  test_db.py  test_detection.py  test_detection_singleton.py  test_evaluation_paths.py  test_geometry.py  test_logger.py
training/: README.md  index.html
training/artifacts/evaluation/2026-02-13T17-30-19Z/: evaluation_summary.json
training/artifacts/evaluation/2026-02-13T17-40-27Z/: per_image_analysis.jsonl
training/experiments/20260213T164537Z_yolov8n_finetune/: dataset.yaml  model.yaml  summary.json
training/experiments/20260213T164537Z_yolov8n_finetune/train/: args.yaml  results.csv
training/notebooks/: 01_data_analysis_and_split_rationale.ipynb
training/scripts/: evaluate.py  export_model.py  prepare_dataset.py  train.py
